--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
 <section3>
     <nav style="background-color: #97edf8;height: 30vw;" >
         <div  class="main5">
-            <img style="height: 100px; width: 95px;margin-top: 100%;"src="IMAGE/BOOSTER LOGO-2.png">
+            <img style="height: 100px; width: 95px;margin-top: 100%;"src="image/BOOSTER LOGO-2.png">
         </div>
         <div class="main6">
-            <img style="height: 100px; width: 95px; margin-top: 100%;"src="IMAGE/BOOSTER LOGO.png">
+            <img style="height: 100px; width: 95px; margin-top: 100%;"src="image/BOOSTER LOGO.png">
         </div>
         <div class="main7">
-            <img style="height: 100px; width: 95px;margin-top: 100%;" src="IMAGE/logo0.png">
+            <img style="height: 100px; width: 95px;margin-top: 100%;" src="image/logo0.png">
         </div>
     </nav>
     <div style="margin-top: 5%; font-size: 200%;">
@@ -114,7 +114,7 @@
         </fieldset>
         <fieldset class="main8">
             <div class="m">
-            <img style="width: 180px;height: 180px;" src="IMAGE/Ellipse 2.png">
+            <img style="width: 180px;height: 180px;" src="image/Ellipse 2.png">
             </div>
             <div class="o">
             <h4>Juillette Faye<br/>Self Care</h4>
