--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="kanie">
         <span class="main">
-            <img style="margin-top: 20px;width: 45px;height: 15px;margin-left: 30%;" src="IMAGE/ParBa.png"alt>
+            <img style="margin-top: 20px;width: 45px;height: 15px;margin-left: 30%;" src="image/ParBa.png"alt>
         </Span>
             <div class="menu">
             <ul style="font-size: small;margin-left: 10%;"> 
@@ -42,7 +42,7 @@
                     </p>
             </div>
             <div class="main2" style="margin-right: 10%;padding-top: 100px;">
-                <img  src="IMAGE/Tech Life Remote Life.png">
+                <img  src="image/Tech Life Remote Life.png">
             </div> 
     </section>
     <div style="display: flex;justify-content: space-around;margin-top: 5%;margin-bottom: 20px;">
